Fixed bug where outline appeared behind other theme icons

--- a/src/page/header/components/theme-changer.module.css
+++ b/src/page/header/components/theme-changer.module.css
@@ -32,7 +32,7 @@
 
 	opacity: 0;
 }
-#theme-changer div:focus-visible {
+#theme-changer div:focus-within {
 	z-index: 100 !important;
 }
 #theme-changer button.selected {
